--- a/Assets/css/about.css
+++ b/Assets/css/about.css
@@ -57,3 +57,22 @@ section {
     height: 60vw;
     z-index: -1;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+.ing {
+    font-size: 300px;
+    display: block;
+    text-align: center;
+    width: 100%;
+}
