--- a/Assets/css/about.css
+++ b/Assets/css/about.css
@@ -23,9 +23,8 @@ body {
 
 section {
     width: 100%;
-    min-height: 300px;
-    /* border-bottom: 20px solid #ffffff; */
-    margin-bottom: 20px;
+    /* min-height: 300px; */
+    margin-bottom: 0.8em;
     background: #319eea;
     position: relative;
     z-index: -1;
@@ -39,12 +38,17 @@ section {
     width: 100%;
     height: 100vh;
     padding-top: 50px;
+    padding-bottom: 50px;
+    min-height: 50vw;
+    margin-bottom: 0px;
 }
 #section01 h1 {
     padding-left: 30px;
     font-weight: 500;
     font-size: 10vw;
     color: #ffffff;
+    text-shadow: 10px 10px 0px black;
+    margin-bottom: 20px;
 }
 #section01 img {
     position: absolute;
@@ -57,6 +61,39 @@ section {
     height: 60vw;
     z-index: -1;
 }
+#section01 span {
+    display: block;
+    padding-left: 30px;
+    font-weight: 300;
+    font-size: 3vw;
+    color: #ffffff;
+    text-shadow: 3px 3px 3px black;
+}
+
+/* section02 */
+#section02 {
+    width: 100%;
+    height: auto;
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+#section02 span {
+    display: block;
+    padding-left: 30px;
+    font-weight: 300;
+    font-size: 3vw;
+    color: #ffffff;
+    text-shadow: 3px 3px 3px black;
+}
+#section02 .panda-svg {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    width: 30vw;
+    height: 30vw;
+    z-index: -1;
+}
 
 
 
@@ -64,15 +101,27 @@ section {
 
 
 
-
-
-
-
-
+/* section03 */
+#section03 {
+    width: 100%;
+    height: auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+#section03 h2 {
+    padding-left: 30px;
+    font-weight: 500;
+    font-size: 10vw;
+    color: #ffffff;
+    text-shadow: 10px 10px 0px black;
+    margin-bottom: 20px;
+}
 
 .ing {
-    font-size: 300px;
+    font-size: 30px;
     display: block;
     text-align: center;
     width: 100%;
+    color: #ffffff;
+    text-shadow: 3px 3px 3px black;
 }
