--- a/Assets/css/about.css
+++ b/Assets/css/about.css
@@ -107,6 +107,7 @@ section {
     height: auto;
     padding-top: 50px;
     padding-bottom: 50px;
+    position: relative;
 }
 #section03 h2 {
     padding-left: 30px;
@@ -114,8 +115,70 @@ section {
     font-size: 10vw;
     color: #ffffff;
     text-shadow: 10px 10px 0px black;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
+#section03 .more{
+    display: block;
+    text-align: right;
+    padding-right: 20px;
+    margin-top: 10px;
+    font-size: 1.1em;
+}
+
+
+
+#section03 .card-container {
+    padding-left: 20px;
+    padding-right: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    justify-content: space-around;
+    align-content: space-evenly;
+}
+#section03 .card {
+    width: 100%;
+    height: 30vw;
+    background-color: lightgray;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+}
+@media screen and (max-width: 800px) {
+    #section03 .card-container {
+        grid-template-columns: repeat(auto-fit, minmax(100px, 100vw));
+    }
+    #section03 .card {
+        height: 60vw;
+    }
+}
+
+
+
+
+#section03 .more {
+    display: block;
+    text-align: right;
+    padding-right: 20px;
+    margin-bottom: 20px;
+    font-size: 1em;
+    color: #096625;
+    text-decoration: none;
+
+    font-weight: bold;
+    transition: color 0.3s ease-in-out;
+}
+
+#section03 .more:hover {
+    color: #0056b3;
+    text-decoration: underline;
+}
+
+
+
+
 
 .ing {
     font-size: 30px;
@@ -125,3 +188,10 @@ section {
     color: #ffffff;
     text-shadow: 3px 3px 3px black;
 }
+
+
+
+
+
+
+
