--- a/Assets/css/about.css
+++ b/Assets/css/about.css
@@ -1,4 +1,6 @@
 body {
+    padding: 0;
+    margin: 0;
     background: #ffffff;
 }
 
@@ -27,7 +29,7 @@ section {
     margin-bottom: 0.8em;
     background: #319eea;
     position: relative;
-    z-index: -1;
+    z-index: 1;
 }
 
 
@@ -140,20 +142,62 @@ section {
     width: 100%;
     height: 30vw;
     background-color: lightgray;
+    position: relative;
+}
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
+.card .card-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center, center;
 }
-@media screen and (max-width: 800px) {
-    #section03 .card-container {
-        grid-template-columns: repeat(auto-fit, minmax(100px, 100vw));
-    }
-    #section03 .card {
-        height: 60vw;
-    }
+.card .card-bg {
+    background-color: #ffffff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.2;
 }
+.card .card-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+}
+.card .card-titel {
+    font-weight: 800;
+    font-size: 2.4vw;
+    color: #1d258b;
+    text-shadow: 3px 3px 3px #dddddd;
+}
+.card .card-period {
+    font-size: 2vw;
+    color: #222222;
+    text-shadow: 3px 3px 3px #dddddd;
+}
+.card-more {
+    font-size: 2vw;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 10px;
+    color: #ffffff;
+    background-color: #666666;
+    
+}
+.card-more:hover {
+    transition: color 1s ease-in-out;
+    padding: 15px;
+    text-decoration: underline;
+}
+
 
 
 
@@ -166,15 +210,44 @@ section {
     font-size: 1em;
     color: #096625;
     text-decoration: none;
-
     font-weight: bold;
     transition: color 0.3s ease-in-out;
+    font-size: 2vw;
 }
-
 #section03 .more:hover {
-    color: #0056b3;
+    /* color: #0056b3; */
     text-decoration: underline;
 }
+@media screen and (max-width: 800px) {
+    #section03 .card-container {
+        grid-template-columns: repeat(auto-fit, minmax(100px, 100vw));
+    }
+    #section03 .card {
+        height: 60vw;
+    }
+    .card .card-titel {
+        font-size: 4.6vw;
+    }
+    .card .card-period,
+    .card-more {
+        font-size: 4vw;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
