--- a/Assets/css/about.css
+++ b/Assets/css/about.css
@@ -3,29 +3,14 @@ body {
     margin: 0;
     background: #ffffff;
 }
-
 .block {
     position: absolute;
     width: 100%;
     height: 100%;
     background: #319eea;
 }
-.scroll {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    color: #fff;
-    font-size: 20px;
-    z-index: 10000;
-}
-
-
-
-
-
 section {
     width: 100%;
-    /* min-height: 300px; */
     margin-bottom: 0.8em;
     background: #319eea;
     position: relative;
@@ -97,12 +82,6 @@ section {
     z-index: -1;
 }
 
-
-
-
-
-
-
 /* section03 */
 #section03 {
     width: 100%;
@@ -126,9 +105,6 @@ section {
     margin-top: 10px;
     font-size: 1.1em;
 }
-
-
-
 #section03 .card-container {
     padding-left: 20px;
     padding-right: 20px;
@@ -144,7 +120,6 @@ section {
     background-color: lightgray;
     position: relative;
 }
-
 .card .card-img {
     position: absolute;
     top: 0;
@@ -197,27 +172,6 @@ section {
     padding: 15px;
     text-decoration: underline;
 }
-
-
-
-
-
-#section03 .more {
-    display: block;
-    text-align: right;
-    padding-right: 20px;
-    margin-bottom: 20px;
-    font-size: 1em;
-    color: #096625;
-    text-decoration: none;
-    font-weight: bold;
-    transition: color 0.3s ease-in-out;
-    font-size: 2vw;
-}
-#section03 .more:hover {
-    /* color: #0056b3; */
-    text-decoration: underline;
-}
 @media screen and (max-width: 800px) {
     #section03 .card-container {
         grid-template-columns: repeat(auto-fit, minmax(100px, 100vw));
@@ -228,8 +182,7 @@ section {
     .card .card-titel {
         font-size: 4.6vw;
     }
-    .card .card-period,
-    .card-more {
+    .card .card-period {
         font-size: 4vw;
     }
 }
@@ -244,7 +197,22 @@ section {
 
 
 
-
+/* #section04 */
+#section04 {
+    width: 100%;
+    height: auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    position: relative;
+}
+#section04 h2 {
+    padding-left: 30px;
+    font-weight: 500;
+    font-size: 10vw;
+    color: #ffffff;
+    text-shadow: 10px 10px 0px black;
+    margin-bottom: 50px;
+}
 
 
 
