--- a/Assets/css/reset.css
+++ b/Assets/css/reset.css
@@ -1,3 +1,10 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+@font-face {
+    src: url("https://res.cloudinary.com/dr6lvwubh/raw/upload/v1529908256/CompressaPRO-GX.woff2");
+    font-family: "Compressa VF";
+    font-style: normal;
+}
+
 /* border-box 초기화 */
 *,
 *:after,
@@ -45,17 +52,6 @@ ul {
     padding: 0;
 }
 
-@font-face {
-    src: url("https://res.cloudinary.com/dr6lvwubh/raw/upload/v1529908256/CompressaPRO-GX.woff2");
-    font-family: "Compressa VF";
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Pretendard';
-    font-style: normal;
-    src: url("https://cdn.jsdelivr.net/gh/orioncactus/Pretendard/dist/web/static/pretendard.css");
-}
-
 /* 폰트 초기화 */
 body,
 button,
@@ -66,7 +62,7 @@ textarea {
     font-size: 16px;
     line-height: 1.4;
     color: #202020;
-    font-family: 'Pretendard', 'Noto Sans KR', 'Arial', 'Helvetica', sans-serif;
+    font-family: "Pretendard GOV", 'Pretendard', -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
